Initial commit: Portfolio website with React + Vite

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="./src/assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/assets/faviconn.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shivam Sharma - Frontend Developer</title>
+    <title>Guru Gangadhar Reddy - Full-stack Developer</title>
   </head>
   <body>
     <div id="root"></div>
